# Consulting-Agent

./: .gitignore  README.md  app.py  event_listener.py  pyproject.toml
src/consulting/: crew.py  main.py
src/consulting/config/: agents.yaml  tasks.yaml
src/idea_validator/: crew.py  main.py
src/idea_validator/config/: agents.yaml  tasks.yaml
