[project]
name = "consulting"
version = "0.1.0"
description = "Consulting using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "linkup-sdk>=0.2.5",
]

[project.scripts]
consulting = "consulting.main:run"
run_crew = "consulting.main:run"
train = "consulting.main:train"
replay = "consulting.main:replay"
test = "consulting.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
